# azfn-python-advanced-etl

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  template.env
docker/data/normalized/: normalized_history.parquet
docker/flyway/migrations/: V00__init_schemas.sql  V01__create_weather_metrics_table.sql
function_apps/azfn_http_trigger/: function.json  main.py
function_apps/azfn_orchestrate_ingestion/: main.py
function_apps/azfn_orchestrator_state_activity/: main.py
function_apps/azfn_task_compute_metrics_and_load_to_database/: main.py
function_apps/azfn_task_normalize_metrics_and_load_to_filesystem/: main.py
function_apps/azfn_task_prepare_ingestion/: main.py
py_project/: logger.py
py_project/config/: __init__.py  _variables.py  base_config.py  database_config.py  filesystem_config.py  functions_config.py
py_project/domain/adapters/: database.py  filesystem.py  orchestrator_state_service.py
py_project/domain/entities/: __init__.py  _validator.py  file_handler.py  weather_data_handler.py
py_project/domain/usecases/: _usecase_common.py  _usecase_exceptions.py  prepare_ingestion.py  weather_compute_metrics.py  weather_normalize_metrics.py
py_project/infrastructure/datalake_gen2_filesystem/: __init__.py  _classes.py  _const.py  _exceptions.py
py_project/infrastructure/functions_orchestrator_state_service/: __init__.py  _classes.py  _const.py
py_project/infrastructure/local_filesystem/: __init__.py  _classes.py  _exceptions.py
tests/integration/: __init__.py
(+13 files in other folders)
